--- a/tests/style.css
+++ b/tests/style.css
@@ -12,11 +12,25 @@ body, td, th, pre, code, select, option, input, textarea {
   background-color: black;
 }
 
+#container { width:700px; margin:10px auto; overflow:hidden; }
+
+.demo { height:200px; width:790px; margin:0; border:1px solid gray; font-family:Verdana; font-size:10px; background:white; overflow:auto; }
+
+.describe { height:200px; width:790px; margin:0; border:1px solid gray; font-family:Verdana; font-size:10px; background:white; overflow:auto; border-top:none; }
+
+#KDP3 { margin-top:10px; }
+
+div.code { }
+
+pre { display:block; }
+
+.syntaxhighlighter { margin:0 0 0 0 !important; padding:0 !important; }
+
 input { font-size:14px; }
 
 h2 { color:#aa44aa; font-size:1.8em; margin-bottom:4px; }
 
-h3 { color:#aabbaa; font-size:1.4em; margin-bottom:0; margin-top:10px; } 
+.h3title { color:#aabbaa; font-size:1.4em; margin-bottom:0; margin-top:10px; } 
 
 h4 { font-size:1.2em; margin:8px 0 0; padding:0; padding-bottom:2px; }
 
@@ -30,26 +44,40 @@ ul li { list-style-type:circle; }
 
 ol li { list-style-type:decimal; }
 
+.describetext { color:#888; }
+
+pre, code {margin:0;}
+
 img { margin:0;padding:0;border:none; }
 
 a img { margin:5px; }
 
-#docs { background-color:#FFFFFF; 
+.footer { background:none; border-top:5px solid #eee; width:100%; margin-top:50px; }
+
+.footer-conts { width:480px; margin: auto auto;  }
+
+#docbox { background-color:#FFFFFF; 
 color: black;
   width: 720px;
-  height: 400px;
+  z-index:100;
+  right:10px; position:absolute; top:10px; margin:0; }
+#js-console { background-color:#FFFFFF; 
+color: black;
+  width: 720px;
   z-index:100;
   left:10px; position:absolute; bottom:10px; margin:0; }
 
-#docs_iframe {
-width: 715px;
-height:350px;
-}
-iframe { width: 100%; height: 100%}
 
-fn { border-bottom:1px dotted green; color:green; cursor:default; font-style:normal; }
+dfn { border-bottom:1px dotted green; color:green; cursor:default; font-style:normal; }
 
 .controls { padding: 5px; }
 
 #controls_menu {  }
+
+h1.title { margin:auto auto; }
+
+strong { display:block; padding:0; padding-top:6px; text-decoration:underline; }
+
+.sourcedef { color:#aaa; }
+
 
