minor sync with mwEmbed updates fixed example links
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@736 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/skins/common/common.css
+++ b/skins/common/common.css
@@ -57,6 +57,24 @@
   -webkit-animation-iteration-count:infinite;
   -webkit-animation-timing-function:linear;
 }
+.cssLoadingSpinner div {
+  width:15px;
+  height:30px;
+  position:absolute;
+  top:35px;
+  left:45px;
+}
+.cssLoadingSpinner div {
+  -moz-border-radius:30px;
+  -webkit-border-radius:30px;
+  border-radius:30px;
+}
+/* uncomment this to use css animation in webkit browsers */
+ @-webkit-keyframes rotateThis {
+  from {-webkit-transform:scale(0.7) rotate(0deg);}
+  to   {-webkit-transform:scale(0.7) rotate(360deg);}
+}
+
 /* jquery.ui overides */
 
 .ui-icon_link {
