* fixed style sheet check for general jquery ui style sheet name * fixed big player button location for easier package of assets. * sync with mwEmbed trunk updates * added special debug url param for remote debug
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@868 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/skins/common/mw.style.mwCommon.css
+++ b/skins/common/mw.style.mwCommon.css
@@ -179,3 +179,19 @@ ul.ui-provider-selection li a {
 	float: right;
 	margin-right: 10px;
 }
+
+
+/**
+* Special Video player play-btn 
+* Lets us use root common style sheets with jquery based skins
+* ( without additional assets in the embedPlayer skins folder )
+*/
+.mv-player .play-btn-large {
+	width : 130px; 
+	height : 96px; 
+	background : url(images/player_big_play_button.png) !important; 
+	position : absolute; 
+	cursor : pointer; 
+	border : none !important;
+	z-index : 1; 
+}
