--- a/modules/EmbedPlayer/skins/kskin/mw.style.PlayerSkinKskin.css
+++ b/modules/EmbedPlayer/skins/kskin/mw.style.PlayerSkinKskin.css
@@ -334,8 +334,11 @@
 }
 
 .k-player .menu-screen {
-	height: 100%;	
+	height: 100%;
+	overflow-y: auto;	
+	overflow-x: hide;
 }
+	
 
 .k-player .menu-screen.menu-share div.ui-state-highlight {
 	background: none repeat scroll 0 0 transparent;
