refactored custom php code to gear up for new resource loader and more strait forward configuration
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@1451 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/skins/common/mw.style.mwCommon.css
+++ b/skins/common/mw.style.mwCommon.css
@@ -187,12 +187,12 @@ ul.ui-provider-selection li a {
 .play-btn-large {
 	width: 70px;
 	height: 53px;
-	background : url(images/player_big_play_button.png?1); 
+	background : url('images/player_big_play_button.png?1'); 
 	position : absolute; 
 	cursor : pointer; 
 	border : none !important;
 	z-index : 1; 
 }
 .play-btn-large:hover {
-	background : url(images/player_big_play_button_hover.png?1); 
+	background : url('images/player_big_play_button_hover.png?1'); 
 }
