improved style tagging for easy custom css adjusted css to look more like kaltura playlist player
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2125 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Playlist/mw.style.playlist.css
+++ b/modules/Playlist/mw.style.playlist.css
@@ -5,6 +5,7 @@
 }
 .playlistItem {
 	font-size: 12px;
+	margin: 5px;
 }
 .playlistItem .clipText {
 	float: left;
@@ -15,4 +16,21 @@
 	float: right;
 	height:20px;
 	padding-top:10px;
+}
+.playlistSet-container{
+	font-size:12px;
+	margin:5px;
+}
+.media-rss-video-list{
+	margin:5px;
+}
+
+.playlistSetList{
+	padding-left:15px;	
+}
+.playlistSetList a{
+	color: #999;
+}
+.playlistSetList a.active{
+	color: #fff;
 }
