--- a/modules/Playlist/mw.style.playlist.css
+++ b/modules/Playlist/mw.style.playlist.css
@@ -8,14 +8,18 @@
 	margin: 5px;
 }
 .playlistItem .clipText {
-	float: left;
-	width: 62%;
+	width: 100%;
 	vertical-align:text-top;
+}
+.playlistItem .clipTitle {
+	float: left;
+	display:block;
 }
 .playlistItem .clipDuration{
 	float: right;
 	height:20px;
-	padding-top:10px;
+	display:block;
+	padding-right: 2px;
 }
 .playlistSet-container{
 	font-size:12px;
