improved playlist fullscreen support renamed playlistSetList to more consistent class name playlist-set-list
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2623 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Playlist/mw.style.playlist.css
+++ b/modules/Playlist/mw.style.playlist.css
@@ -40,14 +40,14 @@
 	margin:5px;
 }
 
-.playlistSetList{
+.playlist-set-list{
 	padding-left:15px;	
 	font-size: 14px;
 }
-.playlistSetList a{
+.playlist-set-list a{
 	color: #999;
 }
-.playlistSetList a.active{
+.playlist-set-list a.active{
 	color: #fff;
 }
 .btnText { font-family: Arial; font-size: 13px; }
