some style / layout tweaks for playlist ads
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2738 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/Playlist/mw.style.playlist.css
+++ b/modules/Playlist/mw.style.playlist.css
@@ -39,7 +39,9 @@
 .media-rss-video-list{
 	margin:5px;
 }
-
+.video-list-wrapper{
+	background-color: #111;
+}
 .playlist-set-list{
 	padding-left:15px;	
 	font-size: 14px;
