--- a/modules/Playlist/mw.style.playlist.css
+++ b/modules/Playlist/mw.style.playlist.css
@@ -32,7 +32,7 @@
 	display:block;
 	padding-right: 2px;
 }
-.playlistSet-container{
+.playlist-set-container{
 	font-size:12px;
 	margin:5px;
 }
@@ -54,9 +54,9 @@
 }
 .btnText { font-family: Arial; font-size: 13px; }
 
-.playlistSet-container a { text-decoration: none; border: 0; font-size: 13px; font-family: Arial; }
-.playlistSet-container a:hover { border-width: 0; background: transparent; }
-.playlistSet-container .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, .playlistSet-container .ui-widget-content .ui-state-hover, .playlistSet-container .ui-widget-header .ui-state-hover { border-width: 0; }
+.playlist-set-container a { text-decoration: none; border: 0; font-size: 13px; font-family: Arial; }
+.playlist-set-container a:hover { border-width: 0; background: transparent; }
+.playlist-set-container .ui-state-active, .ui-widget-content .ui-state-active, .ui-widget-header .ui-state-active, .playlist-set-container .ui-widget-content .ui-state-hover, .playlist-set-container .ui-widget-header .ui-state-hover { border-width: 0; }
 .mv-player .play_head .ui-slider-handle { border-width: 1px; }
 .media-rss-video-list { margin-left: 8px; }
 .ui-state-default, .ui-widget-content .ui-state-default, .ui-widget-header .ui-state-default { border-width: 0; }
