Moving volume slider position to EmbedPlayer css.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@2965 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/skins/mw.style.EmbedPlayer.css
+++ b/modules/EmbedPlayer/skins/mw.style.EmbedPlayer.css
@@ -14,6 +14,12 @@
 	height:21px;
 	/*http://art.gnome.org/themes/gtk2*/
 }
+
+.volume_control div {
+	position:absolute;
+	left:7px;
+}
+
 .mv_status {
 	font-family:"Times New Roman", Times, serif;
 	font-size:14px;
