massive sync up with TMH in prep for resource loader migration *  removed EmbedPlayerManager * added mw.processEmbedPlayers * adds stream switching support more testing needed.
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3266 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/skins/mvpcf/mw.style.PlayerSkinMvpcf.css
+++ b/modules/EmbedPlayer/skins/mvpcf/mw.style.PlayerSkinMvpcf.css
@@ -99,6 +99,21 @@
 	padding-right:4px;
 }
 
+.mv-player .source-switch {
+	border: medium none;
+	display: inline;
+	color: #eee;
+	font: 11px arial, sans-serif;
+	line-height: 20px;
+	overflow: hidden;
+	width: 70px;
+	cursor: pointer;
+	float: right;
+	text-align: center;
+	padding-top:6px;
+}
+
+
 .mv-player .play_head{
 	float: left;
 	display: inline;
