support for horizontal volume bar
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@3326 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/EmbedPlayer/skins/mvpcf/mw.style.PlayerSkinMvpcf.css
+++ b/modules/EmbedPlayer/skins/mvpcf/mw.style.PlayerSkinMvpcf.css
@@ -120,6 +120,7 @@
 	height: 10px;
 	margin-left:8px;
 	margin-top:10px;
+	margin-right: 8px;
 	position:relative;
 }
 
@@ -184,3 +185,6 @@
 .mv-player .overlay-win h3 { font-size:14px;}
 
 .active { font-size: 12px; }
+
+.ui-slider-horizontal.volume-slider { width: 44px; height: 2px; top: 7px; }
+.ui-slider-horizontal.volume-slider .ui-slider-handle { border-width: 1px; }
