Controls are ordered as requested
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@4214 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PS/HBP/jquery-ui-1.8.17.custom.css
+++ b/modules/KalturaSupport/tests/PS/HBP/jquery-ui-1.8.17.custom.css
@@ -576,9 +576,9 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 
 .ui-icon.ui-icon-arrow-4-diag.minimize { background-image: url( images/minimize-btn.png ) !important; }
 
-.ui-icon.ui-icon-comment { background-image: url( images/cc-btn.png ) !important; }
+.ui-icon.ui-icon-comment { background-image: url( images/cc-btn1.png ) !important; }
 
-.ui-icon.ui-icon-comment.active { background-image: url( images/cc-btn-active.png ) !important; }
+.ui-icon.ui-icon-comment.active { background-image: url( images/cc-btn-active1.png ) !important; }
 
 .ui-icon.ui-icon-wrench { background-image: url( images/wrench.png ) !important; }
 
@@ -586,10 +586,12 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 
 .mv-player .play_head { margin-top: 8px !important; }
 
-.mv-player .time-disp { text-align: center; margin-top: -2px; }
+.mv-player .time-disp { text-align: center; margin-top: 2px; }
 
 .time-disp, .rButton { padding-right: 5px !important; margin-left: 0px !important; margin-right: 0px !important; border-right: 1px solid #191919 !important; }
 
 .play_head { border: 1px solid #373737 !important; }
 
 .control-bar { background: #000000 !important; }
+
+.timed-text { padding-left: 5px !important; }
