Added floating border around the playhead
git-svn-id: http://www.kaltura.org/kalorg/html5video/trunk/mwEmbed@4216 b58a29cf-3064-46da-94c6-1c29cc75c8e5

--- a/modules/KalturaSupport/tests/PS/HBP/jquery-ui-1.8.17.custom.css
+++ b/modules/KalturaSupport/tests/PS/HBP/jquery-ui-1.8.17.custom.css
@@ -576,9 +576,9 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 
 .ui-icon.ui-icon-arrow-4-diag.minimize { background-image: url( images/minimize-btn.png ) !important; }
 
-.ui-icon.ui-icon-comment { background-image: url( images/cc-btn1.png ) !important; }
+.ui-icon.ui-icon-comment { background-image: url( images/cc-btn.png ) !important; }
 
-.ui-icon.ui-icon-comment.active { background-image: url( images/cc-btn-active1.png ) !important; }
+.ui-icon.ui-icon-comment.active { background-image: url( images/cc-btn-active.png ) !important; }
 
 .ui-icon.ui-icon-wrench { background-image: url( images/wrench.png ) !important; }
 
@@ -595,3 +595,5 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .control-bar { background: #000000 !important; }
 
 .timed-text { padding-left: 5px !important; }
+
+.padded-border { border: 1px solid #929395; z-index: 1; position: absolute; }
