--- a/modules/KalturaSupport/tests/PS/HBP/jquery-ui-1.8.17.custom.css
+++ b/modules/KalturaSupport/tests/PS/HBP/jquery-ui-1.8.17.custom.css
@@ -1,4 +1,4 @@
-/*
+f/*
  * jQuery UI CSS Framework 1.8.17
  *
  * Copyright 2011, AUTHORS.txt (http://jqueryui.com/about)
@@ -584,11 +584,11 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 
 .play_head.ui-corner-all, .mw_buffer.ui-corner-all, .ui-slider-range.ui-corner-all, .rButton.ui-corner-all, .rButton.ui-state-hover.ui-corner-all { -moz-border-radius: 0px !important; -webkit-border-radius: 0px !important; -khtml-border-radius: 0px !important; border-radius: 0px !important; }
 
-.mv-player .play_head { margin-top: 8px !important; }
+.mv-player .play_head { margin-top: 10px !important; }
 
 .mv-player .time-disp { text-align: center; margin-top: 2px; }
 
-.time-disp, .rButton { padding-right: 5px !important; margin-left: 0px !important; margin-right: 0px !important; border-right: 1px solid #191919 !important; }
+.time-disp, .rButton { padding-right: 5px !important; margin-left: 0px !important; margin-right: 0px !important; border-right: 1px solid #444444 !important; -webkit-box-shadow: inset -1px 0px 0px 0px black; -moz-box-shadow: inset -1px 0px 0px 0px black; box-shadow: inset -1px 0px 0px 0px black; }
 
 .play_head { border: 1px solid #373737 !important; }
 
@@ -597,3 +597,9 @@ button.ui-button::-moz-focus-inner { border: 0; padding: 0; } /* reset extra pad
 .timed-text { padding-left: 5px !important; }
 
 .padded-border { border: 1px solid #929395; z-index: 1; position: absolute; }
+
+.play-btn { margin-left: 3px !important; }
+
+.rButton { width: 29px !important; }
+
+.time-disp { padding-right: 14px !important; }
