Added support for fixing number of thumbnails in carousel via flashvars

--- a/skins/jquery.ui.themes/smoothness/jquery-ui-1.7.2.css
+++ b/skins/jquery.ui.themes/smoothness/jquery-ui-1.7.2.css
@@ -403,3 +403,5 @@
 ----------------------------------*/
 .ui-progressbar { height:2em; text-align: left; }
 .ui-progressbar .ui-progressbar-value {margin: -1px; height:100%; }
+
+.mv-player .overlay-win textarea { color: black !important; }
