--- a/modules/EmbedPlayer/skins/mw.style.EmbedPlayer.css
+++ b/modules/EmbedPlayer/skins/mw.style.EmbedPlayer.css
@@ -37,7 +37,7 @@
 
 .error {
 	position:absolute;
-	top: 37%;
+	top: 46%;
 	left: 50%;
 	margin: 0 0 0 -140px;
 	width: 280px;
@@ -47,8 +47,9 @@
 	border-radius: 4px;
 	text-align: center;
 	background: #fff;
-	padding-bottom: 10px;
+	padding: 10px;
 	color: #000;
+	font-size: 14px;
 }
 .error h2 {
 	font-size: 14px;
