--- a/skins/jquery.ui.themes/kaltura-dark/jquery-ui-1.7.2.css
+++ b/skins/jquery.ui.themes/kaltura-dark/jquery-ui-1.7.2.css
@@ -200,6 +200,7 @@
 .ui-icon-wrench { background-position: -176px -112px; }
 .ui-icon-gear { background-position: -192px -112px; }
 .ui-icon-heart { background-position: -208px -112px; }
+.ui-icon-heart-cancel { background-position: 0 -128px; }
 .ui-icon-star { background-position: -224px -112px; }
 .ui-icon-link { background-position: -240px -112px; }
 .ui-icon-cancel { background-position: 0 -128px; }
