fixed error css

--- a/modules/EmbedPlayer/skins/mw.style.EmbedPlayer.css
+++ b/modules/EmbedPlayer/skins/mw.style.EmbedPlayer.css
@@ -39,7 +39,7 @@
 	position:absolute;
 	top: 46%;
 	left: 50%;
-	margin: 0 0 0 -140px;
+	margin: 0 0 0 -160px;
 	width: 280px;
 	border: 1px solid #eee;
 	-webkit-border-radius: 4px;
@@ -50,6 +50,7 @@
 	padding: 10px;
 	color: #000;
 	font-size: 14px;
+	overflow: hidden;
 }
 .error h2 {
 	font-size: 14px;
