--- a/modules/MwEmbedSupport/skins/jquery.ui.themes/kaltura-dark/jquery-ui-1.7.2.css
+++ b/modules/MwEmbedSupport/skins/jquery.ui.themes/kaltura-dark/jquery-ui-1.7.2.css
@@ -117,14 +117,11 @@
 	width: 16px; 
 	height: 16px; 
 }
-.ui-state-default .ui-icon ,.ui-widget-content .ui-icon {
-	/* @embed */
-	background-image: url(images/ui-icons_cccccc_256x240.png); 
-}
-.ui-state-active .ui-icon,.ui-widget-header .ui-icon,.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {
-	/* @embed */
-	background-image: url(images/ui-icons_ffffff_256x240.png); 
-}
+.ui-widget-content .ui-icon {background-image: url(images/ui-icons_cccccc_256x240.png); }
+.ui-widget-header .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
+.ui-state-default .ui-icon { background-image: url(images/ui-icons_cccccc_256x240.png); }
+.ui-state-hover .ui-icon, .ui-state-focus .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
+.ui-state-active .ui-icon {background-image: url(images/ui-icons_ffffff_256x240.png); }
 .ui-state-highlight .ui-icon {background-image: url(images/ui-icons_4b8e0b_256x240.png); }
 .ui-state-error .ui-icon, .ui-state-error-text .ui-icon {background-image: url(images/ui-icons_a83300_256x240.png); }
 
