--- a/skins/common/mw.style.mwCommon.css
+++ b/skins/common/mw.style.mwCommon.css
@@ -1,3 +1,24 @@
+#container { position: relative; min-height: 100%; }
+#container, video { width: 100%; height: 100%; }
+#playlistContainer { height: 100%; }
+#playerContainer { position: relative; height: 100%; z-index:1; background: #000; }
+#videoHolder { position: relative; }
+.fullscreen  #playerContainer {
+	position: absolute;
+	width: 100%; 
+	height: 100%;
+	min-height: 100%;
+	margin: 0;
+}
+
+/* Horizontal Playlist */
+.horizontal #playlistContainer { float: right; width: 300px; }
+.horizontal #playerContainer { margin-right: 300px; }
+
+/* Vertical Playlist */
+.vertical #playlistContainer { width: 100%; height: 300px; position: absolute; bottom: 0; }
+
+.mwEmbedPlayer { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
 
 .modal_editor {
 	/*background:#AAA none repeat scroll 0 0;
@@ -58,7 +79,7 @@
 .play-btn-large {
 	width: 70px;
 	height: 53px;
-	background : url('images/player_big_play_button.png?1'); 
+	background : url('images/player_big_play_button.png'); 
 	position : absolute; 
 	cursor : pointer; 
 	border : none !important;
@@ -66,7 +87,7 @@
 }
 
 .play-btn-large:hover {
-	background : url('images/player_big_play_button_hover.png?1'); 
+	background : url('images/player_big_play_button_hover.png'); 
 }
 
 .carouselContainer {
