partially working horizontal playlist

--- a/skins/common/mw.style.mwCommon.css
+++ b/skins/common/mw.style.mwCommon.css
@@ -12,8 +12,8 @@
 }
 
 /* Horizontal Playlist */
-.horizontal #playlistContainer { float: right; width: 300px; }
-.horizontal #playerContainer { margin-right: 300px; }
+.horizontal #playlistContainer { float: right; }
+.horizontal #playerContainer { }
 
 /* Vertical Playlist */
 .vertical #playlistContainer { width: 100%; height: 300px; position: absolute; bottom: 0; }
