--- a/skins/common/mw.style.mwCommon.css
+++ b/skins/common/mw.style.mwCommon.css
@@ -1,6 +1,6 @@
 #container { position: relative; min-height: 100%; }
 #container, video { width: 100%; height: 100%; }
-#playlistContainer { height: 100%; }
+#playlistContainer { height: 100%; border: 0; }
 #playerContainer { position: relative; height: 100%; z-index:1; background: #000; }
 #videoHolder { position: relative; }
 .fullscreen  #playerContainer {
