fixed vertical playlists and audio playlist

--- a/modules/Playlist/mw.style.playlist.css
+++ b/modules/Playlist/mw.style.playlist.css
@@ -41,6 +41,12 @@
 }
 .video-list-wrapper{
 	background-color: #111;
+	position: absolute;
+	top: 0;
+	bottom: 0;
+	z-index: 1;
+	overflow-x: hidden;
+	overflow-y: auto;
 }
 .playlist-set-list{
 	padding-left:15px;	
