--- a/skins/common/mw.style.mwCommon.css
+++ b/skins/common/mw.style.mwCommon.css
@@ -19,7 +19,7 @@
 .horizontal #playerContainer { }
 
 /* Vertical Playlist */
-.vertical #playlistContainer { width: 100%; height: 300px; position: absolute; bottom: 0; }
+.vertical #playlistContainer { width: 100%; position: absolute; bottom: 0; }
 
 .mwEmbedPlayer { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
 
