minor css changes

--- a/modules/EmbedPlayer/resources/skins/mvpcf/PlayerSkinMvpcf.css
+++ b/modules/EmbedPlayer/resources/skins/mvpcf/PlayerSkinMvpcf.css
@@ -19,6 +19,9 @@
 }
 .mv-player .control-bar {
 	height: 29px;
+	margin: 0; 
+	padding: 0;
+	border: 0;
 	z-index: 2;
 }
 .mv-player .controlInnerSmall {
