set player container height to auto when in vertical playlist

--- a/modules/Playlist/resources/mw.style.playlist.css
+++ b/modules/Playlist/resources/mw.style.playlist.css
@@ -76,4 +76,5 @@
 .horizontal #playerContainer { }
 
 /* Vertical Playlist */
+.vertical #playerContainer { height: auto; }
 .vertical #playlistContainer { width: 100%; position: absolute; bottom: 0; }
