--- a/modules/MwEmbedSupport/skins/common/MwEmbedCommonStyle.css
+++ b/modules/MwEmbedSupport/skins/common/MwEmbedCommonStyle.css
@@ -1,7 +1,7 @@
 #container { position: relative; min-height: 100%; }
 #container, video { width: 100%; height: 100%; }
 #playerContainer { overflow: hidden; position: relative; height: 100%; background: #000; }
-#videoHolder { position: relative; }
+#videoHolder { position: relative; overflow: hidden; }
 .fullscreen  #playerContainer {
 	position: absolute;
 	width: 100%; 
@@ -13,7 +13,7 @@
 	margin: 0;
 }
 
-.mwEmbedPlayer { width: 100%; height: 100%; position: absolute; top: 0; left: 0; }
+.mwEmbedPlayer { width: 100%; height: 100%; overflow: hidden; position: absolute; top: 0; left: 0; }
 
 .modal_editor {
 	/*background:#AAA none repeat scroll 0 0;
