--- a/modules/MwEmbedSupport/skins/common/MwEmbedCommonStyle.css
+++ b/modules/MwEmbedSupport/skins/common/MwEmbedCommonStyle.css
@@ -3,9 +3,9 @@
 #playerContainer { overflow: hidden; position: relative; height: 100%; background: #000; }
 #videoHolder { position: relative; overflow: hidden; }
 .fullscreen  #playerContainer {
-	position: absolute;
-	width: 100%; 
-	height: 100%;
+	position: absolute !important;
+	width: 100% !important; 
+	height: 100%! important;
 	z-index: 9999;
 	min-height: 100%;
 	top: 0; 
