--- a/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
+++ b/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
@@ -1,5 +1,4 @@
 .mwPlayerContainer video { width: 100%; height: 100%; }
-.mwPlayerContainer { position: relative; height: 100%; background: #000; }
 .videoHolder { position: relative; overflow: hidden;  width: 100%; height: 100%; }
 .mwPlayerContainer.fullscreen {
 	position: absolute !important;
@@ -11,6 +10,8 @@
 	left: 0;
 	margin: 0;
 }
+
+.mwEmbedPlayer { width: 100%; height: 100%; overflow: hidden; position: absolute; top: 0; left: 0; }
 
 .player_select_list {
 	color:white;
