--- a/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
+++ b/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
@@ -13,6 +13,14 @@
 
 .mwEmbedPlayer { width: 100%; height: 100%; overflow: hidden; position: absolute; top: 0; left: 0; }
 
+.mv-player .control-bar.hover {
+	width: 100%;
+	position: absolute;
+	bottom: 0;
+	left: 0;
+}
+
+
 .player_select_list {
 	color:white;
 	font-size:10pt;
