--- a/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
+++ b/modules/EmbedPlayer/resources/skins/EmbedPlayer.css
@@ -10,6 +10,7 @@
 	left: 0;
 	margin: 0;
 }
+.mwPlayerContainer { position: relative }
 
 .mwEmbedPlayer { width: 100%; height: 100%; overflow: hidden; position: absolute; top: 0; left: 0; }
 
