improved resize test files support, added more tests

--- a/docs/css/kdoc.css
+++ b/docs/css/kdoc.css
@@ -25,3 +25,15 @@
 .navbar-search .search-query {
 	background-color: #366;
 }
+@-webkit-keyframes blink {  
+  from { opacity: 1.0; }
+  to { opacity: 0.0; }
+}
+span.blink{
+	text-decoration: blink;
+	-webkit-animation-name: blink;  
+	-webkit-animation-iteration-count: infinite;  
+	-webkit-animation-timing-function: cubic-bezier(1.0,0,0,1.0);
+	-webkit-animation-duration: .5s; 
+}
+
