--- a/docs/css/kdoc.css
+++ b/docs/css/kdoc.css
@@ -36,3 +36,6 @@ span.blink{
 	-webkit-animation-timing-function: cubic-bezier(1.0,0,0,1.0);
 	-webkit-animation-duration: .5s; 
 }
+.tab-content {
+    overflow-y: show;
+}
