adds more pretty documentation: Comscore, & External Resources

--- a/docs/css/kdoc.css
+++ b/docs/css/kdoc.css
@@ -40,6 +40,9 @@ span.blink{
     overflow-y: show;
 }
 .tab-content .tdValue{ 
-	overflow: hidden;
 	max-width: 160px;
+}
+
+.tabs-left > .nav-tabs {
+	margin-right: 12px;
 }
